# autotool-client

./: .gitignore  MyDataSystem.hs  NOTES.md  README.md  TODO.markdown  TODO.md  autotool-client.cabal  autotool.cabal  passrate.txt  taskTypes.mock
data/: assignments  assignments.json  courses  courses.json  enrollments  groups  solutions  students  taskInstances  task_instances  taskconfigs.json  tasks  tutors
db/: client.db
features/: access_landing_page.feature  create_task.feature  display_bootstrap_style_elements.feature  show_available_autotool_tasks.feature
features/step_definitions/: autotool_steps.rb
snaplets/heist/templates/: 404.tpl  base.tpl  index.tpl
snaplets/heist/templates/forms/: taskConfig.tpl
snaplets/heist/templates/pages/: selectStudent.tpl
snaplets/heist/templates/student/: base.tpl  index.tpl
snaplets/heist/templates/task/: select.tpl
snaplets/heist/templates/tutor/: base.tpl  index.tpl
snaplets/sqlite-simple/: devel.cfg
spec/: acid-transformation-notes.markdown
spec/LoseBlattSammlung/: Functions.markdown  Modellierungsprozess.markdown  Plan.markdown  Skeleton-2.markdown  Skeleton.markdown  Types.markdown
spec/Modellierungsversuche/Variante_A/: Model_rel_extracted.hs  Model_rel_integrated.hs
spec/Modellierungsversuche/Variante_B/: Model.hs
spec/Modellierungsversuche/release/: Database.hs  Model.hs  README.markdowm  Types.hs
spec/Modellierungsversuche/release/archive/: Model_1.hs  Model_2.hs
spec/archive/new/: App.hs  Model.hs  mylittlescript.hs
spec/new2/: Abfragen.markdown  App.hs  DataStructure.hs  DataStructure2.hs  DataTree.markdown  Flow.markdown  Functions.markdonw  Model.hs
spec/new2/db/: course.intmap  task.intmap  tutor.intmap
src/: Application.hs  Main.hs  NOTES.md  Site.hs
src/Controller/: Assignment.hs  Course.hs  Enrollment.hs  Solution.hs  Student.hs  Task.hs  TaskConfig.hs  TaskTree.hs  Tasks.hs  Tutor.hs
src/Database/: Switch.hs
src/Database/Adapter/: FileStore.hs  IORef.hs  MongoDB.hs  Sqlite.hs
src/Model/: Base.hs  Datatypes.hs  Indexable.hs  Switch.hs  Types.hs
src/Model/Adapter/: Base.hs  File.hs  FileStore.hs  IORef.hs  Sqlite.hs
src/Model/DatabaseAdapter/: FileStore.hs  IORef.hs  MongoDB.hs  Sqlite.hs
src/Model/DbAdapter/: AcidState.hs  Base.hs  FileStore.hs  IORef.hs  MongoDB.hs  Sqlite.hs
src/Model/Extensions/: Indexable.hs  MongoIO.hs  Relational.hs
src/Model/Types/: Assignment.hs  Course.hs  Enrollment.hs  Group.hs  Solution.hs  Task.hs  TaskConfig.hs  TaskInstance.hs
src/Utils/: Auth.hs  Form.hs  Render.hs  TaskReader.hs
src/View/: Solution.hs  Task.hs  Tutor.hs
static/css/: custom.css
(+55 files in other folders)
