Name:                autotool
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable autotool
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    aeson                     >= 0.6.1.0,
    autotool-xmlrpc-client    >= 0.3.4,
    base                      >= 4       && < 5,
    bytestring                >= 0.9.1   && < 0.12,
    containers                >= 0.4.2.1,
    digestive-functors        >= 0.5,
    digestive-functors-heist  >= 0.4,
    digestive-functors-snap   >= 0.4,
    either-unwrap             >= 1.1,
    heist                     >= 0.10    && < 0.12,
    lens                      >= 3.7.0.1 && < 3.8,
    mongoDB                   >= 1.4.1,
    MonadCatchIO-transformers >= 0.2.1   && < 0.4,
    mtl                       >= 2       && < 3,
    old-locale                == 1.*,
    snap                      >= 0.10    && < 0.12,
    snap-core                 >= 0.9     && < 0.12,
    snap-server               >= 0.9     && < 0.12,
    snap-loader-static        >= 0.9     && < 0.10,
    snaplet-mongodb-minimalistic >= 0.0.6.9,
    snaplet-sqlite-simple     >= 0.4.3,
    split                     >= 0.2.1.1,
    sqlite-simple             >= 0.4.2.0,
    strict                    >= 0.3.2,
    strict-concurrency        >= 0.2.4.1,
    text                      >= 0.11    && < 0.12,
    time                      >= 1.1     && < 1.5,
    xmlhtml                   >= 0.1

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
